--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>Le Baron NFT</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -69,9 +69,9 @@
     <section class="container not-connected">
       <div>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
-        <h1 id="welcomeH1">Welcome to the CodeCats NFT Project!</h1>
+        <h1 id="welcomeH1">Welcome to Le Baron NFT Project!</h1>
         <p id="welcomeP">
-          The CodeCats NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
+          Le Baron NFT Project is a decentralized, Non-Fungible Token (NFT) is a non-interchangeable unit of data stored on a blockchain, a form of digital ledger, that can be sold and traded. Baron Samedi, also written Baron Samdi, Bawon Samedi or Bawon Sanmdi, is one of the loa of Haitian Vodou. He is a loa of the dead, along with Barons numerous other incarnations Baron Cimetiere, Baron La Croix and Baron Criminel. He is syncretized with Saint Martin de Porres. Do not miss the announcement of the start of distribution of gifts by subscribing to the pages of the Le Baron project on Discord, Twitter and Instagram. We have many more surprises prepared - it will be amazing and very rewarding! Le Baron.
         </p>
       </div>
     </section>
@@ -104,29 +104,29 @@
         </div>
         <h1 id="mainHeading">NFT Drop Coming Soon!!</h1>
         <p id="mainText">
-          A new batch of cute cats will be available very soon!
+          A new batch of incarnations will be available very soon!
         </p>
         <a
           id="actionButton"
-          href="https://discord.gg/A9CnsVzzkZ"
+          href="https://discord.gg/g2Br8KYHvq"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
+          ><span>Join the Community</span>
         </a>
         <div id="mintContainer" class="mint-container hidden">
           <div class="info-container">
             <div>
               <h3>Supply</h3>
-              <p id="totalSupply">100</p>
+              <p id="totalSupply">5000</p>
             </div>
             <div>
               <h3>Price Per Mint</h3>
-              <p id="pricePerMint">1 ETH</p>
+              <p id="pricePerMint">0.005 ETH</p>
             </div>
             <div>
               <h3>Max</h3>
-              <p id="maxPerMint">5 per wallet</p>
+              <p id="maxPerMint">10 per wallet</p>
             </div>
           </div>
           <div class="mint-qty">
