--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,7 +71,7 @@
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <h1 id="welcomeH1">Welcome to Le Baron NFT Project!</h1>
         <p id="welcomeP">
-          Le Baron NFT Project is a decentralized, Non-Fungible Token (NFT) is a non-interchangeable unit of data stored on a blockchain, a form of digital ledger, that can be sold and traded. Baron Samedi, also written Baron Samdi, Bawon Samedi or Bawon Sanmdi, is one of the loa of Haitian Vodou. He is a loa of the dead, along with Barons numerous other incarnations Baron Cimetiere, Baron La Croix and Baron Criminel. He is syncretized with Saint Martin de Porres. Do not miss the announcement of the start of distribution of gifts by subscribing to the pages of the Le Baron project on Discord, Twitter and Instagram. We have many more surprises prepared - it will be amazing and very rewarding! Le Baron.
+          Le Baron NFT Project - Baron Samedi, also written Baron Samdi, Bawon Samedi or Bawon Sanmdi, is one of the loa of Haitian Vodou. He is a loa of the dead, along with Barons numerous other incarnations Baron Cimetiere, Baron La Croix and Baron Criminel. He is syncretized with Saint Martin de Porres.
         </p>
       </div>
     </section>
