--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,9 +69,9 @@
     <section class="container not-connected">
       <div>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
-        <h1 id="welcomeH1">Welcome to Le Baron NFT Project!</h1>
+        <h1 id="welcomeH1">Le Baron NFT Project!</h1>
         <p id="welcomeP">
-          Le Baron NFT Project - Baron Samedi, also written Baron Samdi, Bawon Samedi or Bawon Sanmdi, is one of the loa of Haitian Vodou. He is a loa of the dead, along with Barons numerous other incarnations Baron Cimetiere, Baron La Croix and Baron Criminel. He is syncretized with Saint Martin de Porres.
+          Le Baron NFT Art Project - Baron Samedi, is one of the loa of Haitian Vodou. He is syncretized with Saint Martin de Porres. Le Baron is an avid collector of Crypto assets and a sharp dresser.
         </p>
       </div>
     </section>
